2009-03-12  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/segment.hpp:
		Fixed several bugs relative to weight and generating strings.
	* cpp/src/unit_test/OpenClas_VS2005.vcproj:
	* cpp/src/unit_test/OpenClas_VS2008.vcproj:
		Change optimization options.
	* cpp/src/unit_test/unit_test_segment.hpp:
		Minor bug fixed.
	* cpp/src/unit_test/unit_test_serialization.hpp:
		Remove unused BOOST_FAIL().

2009-03-10  Tao Wang  <dancefire@gmail.com>

	* cpp/src/unit_test/unit_test_serialization.hpp:
		Remove unused strings.
		Add dump code for gcc -O3 compile
	* cpp/src/unit_test/unit_test_segment.hpp:
		Fix output locale bug. Now output can display correctly.

2009-03-10  Tao Wang  <dancefire@gmail.com>

	* cpp/src/unit_test/unit_test_longtime.hpp:
		Add testcase test_Segment_performance() for performance evaluation.
	
2009-03-09  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/serialization.hpp:
	* cpp/include/openclas/segment.hpp:
	* cpp/include/openclas/utility.hpp:
	* cpp/src/unit_test/unit_test_segment.hpp:
		Add locale_platform for output to console under different platform.
		Replace corresponding locale_* to locale_platform.
	* cpp/src/unit_test/unit_test_longtime.hpp:
		Add function ms(clock_t tick), which output the time span in 'ms' since 'tick'.
	* cpp/src/unit_test/CMakeLists.txt:
		Add link flag for boost_iostreams under Linux.

2009-03-09  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/serialization.hpp:
		Add code to rasie exception if file cannot open.
		Fix several bugs.
		Implemented .gz of text format of dictionary.
	* cpp/include/openclas/utility.hpp:
		Add WORD_TAG_SIZE.
		
	* cpp/src/unit_test/OpenClas_VS2005.vcproj:
	* cpp/src/unit_test/OpenClas_VS2008.vcproj:
		Move some test to new file unit_test_longtime.hpp to centralize time-expensive unit testcases.
	* cpp/src/unit_test/unit_test.cpp:
		Move const char* sample[] from unit_test_segment.hpp.
	* cpp/src/unit_test/unit_test_longtime.hpp: